syntax = "proto3";

package task;

option go_package = "taskpb/";

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc GetTask(GetTaskRequest) returns (TaskResponse);
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
}

message GetTaskRequest {
  uint64 id = 1;
}

message GetTasksRequest {}

message GetTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message DeleteTaskRequest {
  uint64 id = 1;
}

message TaskResponse {
  Task task = 1;
}

message DeleteTaskResponse {
  string message = 1;
}
